--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   
-  <title>Frontend Mentor | NFT preview card component</title>
+  <title>Cartão de NTF</title>
 
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="app/css/style.css">
 
 </head>
 <body>
@@ -56,13 +56,6 @@
 
     </div>
   </main>
-
-  <!-- Atribuição
-  <div class="atribuicao">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" title="Link do website frontend mentor">Frontend Mentor</a>. 
-    Coded by <a href="https://codepen.io/Marcela-Costa" target="_blank" title="Link de codepen da codificadora">Marcela Costa</a>.
-  </div>
-   -->
 
 </body>
 
