Quinto commit - alterações fundo e link svg

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
       <div class="valor-tempo">
 
         <a href="#" class="valor-tempo__valor">
-          <img src="/images/icon-ethereum.svg" class="valor-tempo__icone-ethereum"><span class="valor-tempo__valor-ethereum">0.041 ETH</span></img>
+          <img src="images/icon-ethereum.svg" class="valor-tempo__icone-ethereum"><span class="valor-tempo__valor-ethereum">0.041 ETH</span></img>
         </a>
         
         <!-- Tempo Restante -->
         <a href="#" class="valor-tempo__tempo">
-          <img src="/images/icon-clock.svg" class="valor-tempo__icone-relogio"><span id="valor-tempo__dias">faltam 3 dias</span></img>
+          <img src="images/icon-clock.svg" class="valor-tempo__icone-relogio"><span id="valor-tempo__dias">faltam 3 dias</span></img>
         </a>
         
       </div>
